Fix banner spacing around banner images

--- a/app/assets/stylesheets/override.scss
+++ b/app/assets/stylesheets/override.scss
@@ -1,4 +1,19 @@
+
+
 .override-main {
+  p:first-child {
+    margin: 0px;
+    display: inline-block;
+    
+    &:after {
+      content: "";
+      clear: both;
+      height: 0;
+      visibility: hidden;
+      display: block;
+    }
+  }
+
   img {
     float: left;
     margin-right: 10px;
